--- a/poster_Rome.tex
+++ b/poster_Rome.tex
@@ -233,9 +233,9 @@ Thibaut Divoux, Sébastien Manneville}
 	\end{itemize}
 	\Subhead{Qualitatively different from}
 	\begin{itemize}
-	\item phase separation patterns 
+	\item Phase separation patterns 
 	\item Turing patterns
-	\item usual wrinkles
+	\item Usual wrinkles
 	\end{itemize}	 
 \end{textblock}
 
