logos full ref of Gallot et al.

--- a/poster_Rome.tex
+++ b/poster_Rome.tex
@@ -131,7 +131,7 @@ Wrinkling and yielding of protein gels
 \LHead{Mathieu Nespoulous, Christophe Perge, Nicolas Taberlet, Thomas Gibaud,
 Thibaut Divoux, Sébastien Manneville}
 
-\LHead{\textsc{Laboratoire de Physique -- UMR 5672, Ecole Normale Supérieure de Lyon}}
+\LHead{\raisebox{-0.3em}{\includegraphics[height=\baselineskip]{CNRSfilaire-Q}\qquad\includegraphics[height=\baselineskip]{logo_UCBL}\qquad}\textsc{Laboratoire de Physique, Ecole Normale Supérieure de Lyon}\raisebox{-0.3em}{\qquad\includegraphics[height=\baselineskip]{logo_ens-lyon}}}
 
 \end{textblock}
 
@@ -224,8 +224,6 @@ Thibaut Divoux, Sébastien Manneville}
 \end{textblock}
 
 \begin{textblock}{3}(0,10)
-	Corresponds with the fall of $G^\prime$.
-	
 	\Subhead{Length scales}
 	\begin{itemize}
 	\item A fundamental that does not evolve
@@ -263,7 +261,7 @@ Thibaut Divoux, Sébastien Manneville}
 		\node[above right]{\includegraphics[width=\textwidth]{collage_cut}};
 		\draw[ultra thick] ++(0,0.5em) -- ++(0.33\textwidth,0) node[pos=0.5, below=0.25em, font=\small] {\SI{1}{\milli\metre}};
 	\end{tikzpicture}\\
-	Tiled, enhanced relief
+	Tiled, enhanced elevation
 \end{textblock}
 	
 
@@ -485,7 +483,7 @@ Thibaut Divoux, Sébastien Manneville}
 	\node[above=of mce, draw] (pc) {PC};
 	\draw[->] (mce)-- (pc);
 	\draw[->] (rh) -- +(0,1em) -| (pc.north);
-	\node[below right=1em and 0 of mce.south west, text width=0.18\textwidth] {Gallot et al. RSI (2013).};
+	\node[above right=0 and 0.1\textwidth of sch.south east, text width=0.25\textwidth, align=right] {Gallot et al. \linebreak\textit{Rev. Sci. Instrum.} 84, 045107 (2013).};
 	\node[below right =of sch.north east, text width=0.32\textwidth] {3\% of \SI{30}{\micro\metre} acrylamide beads as contrast agent};
 	\end{tikzpicture}
 	
