Remarque Mathieu Captions

--- a/creep/creep_yaourt.tex
+++ b/creep/creep_yaourt.tex
@@ -50,7 +50,7 @@ Yoghurts.
 \begin{figure}
 \centering
 \includegraphics[width=7cm,clip]{Fig1.eps}
-\caption{(color online) Strain response $\gamma(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The gray dotted line shows $\gamma=1$. Inset: failure time $\tau_f$ vs $\sigma$. The red line is the best power-law fit $\tau_f=A\sigma^{-\beta}$ with $\beta=5.45\pm 0.05$ and $A=40.6\pm 0.5$~s.Pa$^\beta$.
+\caption{(color online) Strain response $\gamma(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The gray dotted line shows $\gamma=1$. Inset: failure time $\tau_f$ vs $\sigma$. The red line is the best power-law fit $\tau_f=A\sigma^{-\beta}$ (Basquin law) with $\beta=5.45\pm 0.05$ and $A=40.6\pm 0.5$~s.Pa$^\beta$.
 \label{fig1}}
 \end{figure} 
 %%%%%%%%%%%%
@@ -60,7 +60,7 @@ Yoghurts.
 \begin{figure}
 \centering
 \includegraphics[width=7cm,clip]{Fig2.eps}
-\caption{(color online) Normalized shear rate responses $\gp(t)/\gpm$ corresponding to the data of Fig.~\ref{fig1} and plotted so as to emphasize each of the three successive creep regimes. $\gpm$ is the minimum shear rate reached at $\taum$ (see text and Suppl. Fig.~2). (a)~Primary creep: $\gp(t)/\gpm$ vs $t/\tau_f$ in logarithmic scales. The yellow line is $\gp(t)\sim t^{-0.85}$. Inset: Linear viscoelastic moduli $G'$ (top) and $G''$ (bottom) as a function of frequency $f$ for a strain amplitude of 1XXX~\%. Red lines are power laws $G'\sim G''\sim f^{0.15}$. (b)~Secondary creep: $\gp(t)/\gpm$ vs $t/\tau_f$ in linear scales. The yellow curve is a sixth order polynomial fit to the data showing that $\taum\simeq 0.6\tau_f$. Inset: $\taum$ vs $\tau_f$. The red line is the best linear fit $\taum=0.598\tau_f$. (c)~Tertiary creep: $\gp(t)/\gpm$ vs $(\tau_f-t)/\tau_f$ in logarithmic scales with a reversed horizontal axis. The yellow line is $\gp(t)\sim (\tau_f-t)^{-1}$. 
+\caption{(color online)  Three successive creep regimes. Normalized shear rate responses $\gp(t)/\gpm$ corresponding to the data of Fig.~\ref{fig1} and plotted so as to emphasize each of the three successive creep regimes. $\gpm$ is the minimum shear rate reached at $\taum$ (see text and Suppl. Fig.~2). (a)~Primary creep: $\gp(t)/\gpm$ vs $t/\tau_f$ in logarithmic scales. The yellow line is $\gp(t)\sim t^{-0.85}$ (Andrade creep). Inset: Linear viscoelastic moduli $G'$ (top) and $G''$ (bottom) as a function of frequency $f$ for a strain amplitude of 1XXX~\%. Red lines are power laws $G'\sim G''\sim f^{0.15}$. (b)~Secondary creep: $\gp(t)/\gpm$ vs $t/\tau_f$ in linear scales. The yellow curve is a sixth order polynomial fit to the data showing that $\taum\simeq 0.6\tau_f$. Inset: $\taum$ vs $\tau_f$. The red line is the best linear fit $\taum=0.598\tau_f$. (c)~Tertiary creep: $\gp(t)/\gpm$ vs $(\tau_f-t)/\tau_f$ in logarithmic scales. The yellow line is $\gp(t)\sim (\tau_f-t)^{-1}$. Note that the time runs leftwards in (c).
 \label{fig2}}
 \end{figure} 
 %%%%%%%%%%%%
@@ -69,7 +69,7 @@ Yoghurts.
 \begin{figure*}
 \centering
 \includegraphics[width=18cm,clip]{Fig3.eps}
-\caption{(color online) Ultrasonic images (left) and direct visualization of the Couette cell (right) recorded simultaneously at various times in the primary [(a)~$t/\tau_f=0.02$], secondary [(b)~$t/\tau_f=0.57\simeq\taum/\tau_f$], and tertiary  [(c) $t/\tau_f=0.93$ and (d) 0.99] creep regimes. Ultrasonic images are velocity maps $v(r,z,t)$ computed by averaging over 4~s and coded using the linear color levels shown below the images, whose position relative to the picture of the cell reflects the actual arrangement of the ultrasonic probe along the vertical direction $z$. Experiment performed on a 4\%~wt. casein gel seeded with 3\%~wt. polyamide spheres and acidified with 1\%~wt. GDL under $\sigma=300$~Pa. The gap width is 2~mm. See also Suppl. Movie~1.
+\caption{(color online) Fractures along the vorticity direction. Ultrasonic images (left) and direct visualization of the Couette cell (right) recorded simultaneously at various times in the primary [(a)~$t/\tau_f=0.02$], secondary [(b)~$t/\tau_f=0.57\simeq\taum/\tau_f$], and tertiary  [(c) $t/\tau_f=0.93$ and (d) 0.99] creep regimes. Ultrasonic images are velocity maps $v(r,z,t)$ computed by averaging over 4~s and coded using the linear color levels shown below the images, whose position relative to the picture of the cell reflects the actual arrangement of the ultrasonic probe along the vertical direction $z$. Experiment performed on a 4\%~wt. casein gel seeded with 3\%~wt. polyamide spheres and acidified with 1\%~wt. GDL under $\sigma=300$~Pa. The gap width is 2~mm. See also Suppl. Movie~1.
 \label{fig3}}
 \end{figure*} 
 %%%%%%%%%%%%
@@ -78,7 +78,7 @@ Yoghurts.
 \begin{figure*}
 \centering
 \includegraphics[width=18cm,clip]{Fig4.eps}
-\caption{(color online) (a)~Local velocity $\langle v(r,z,t)\rangle_z$ and (b)~local strain field $\langle\gl(r,z,t)\rangle_z$ averaged over the vertical direction $z$ at various times during primary creep: $t/\tau_f=1.9\,10^{-3}$ (black $\bullet$), $1.7\,10^{-2}$ (blue $\blacktriangledown$), and 0.15 (red $\blacksquare$). Solid lines are linear profiles. (c)~Spatiotemporal diagram of the local velocity $\langle v(r,z,t)\rangle_r$ averaged over the radial direction $r$ and plotted in linear color levels as a function of $z$ and $t/\tau_f$. (d)~Standard deviation $\delta_z v(t)$ of $\langle v(r,z,t)\rangle_r$ taken over the vertical direction $z$ (thick black line) together with corresponding standard deviation $\delta_r v(t)$ computed over the radial direction $r$ on the $z$-average $\langle v(r,z,t)\rangle_z$ (thin red line). (e)~Fracture length $\ell(t)$ vs $(\tau_f-t)/\tau_f$ as inferred from direct visualization ($\bullet$, average over 6 different fractures, error bars show the standard deviation) and from ultrasonic imaging ($\circ$) and normalized by the height $H$ of the Couette cell. Gray dots show the visualization data for the longest fracture which leads to the failure of the sample at $\tau_f$. Red lines are the best fits $\ell(t)=\alpha+\beta\log(1-t/\tau_f)$ to the visualization data. Same experiment as in Fig.~\ref{fig3}. See also Suppl. Movie~1.
+\caption{(color online) Local insights into creep and rupture. (a)~Local velocity $\langle v(r,z,t)\rangle_z$ and (b)~local strain field $\langle\gl(r,z,t)\rangle_z$ averaged over the vertical direction $z$ at various times during primary creep: $t/\tau_f=1.9\,10^{-3}$ (black $\bullet$), $1.7\,10^{-2}$ (blue $\blacktriangledown$), and 0.15 (red $\blacksquare$). Solid lines are linear profiles. (c)~Spatiotemporal diagram of the local velocity $\langle v(r,z,t)\rangle_r$ averaged over the radial direction $r$ and plotted in linear color levels as a function of $z$ and $t/\tau_f$. (d)~Standard deviation $\delta_z v(t)$ of $\langle v(r,z,t)\rangle_r$ taken over the vertical direction $z$ (thick black line) together with corresponding standard deviation $\delta_r v(t)$ computed over the radial direction $r$ on the $z$-average $\langle v(r,z,t)\rangle_z$ (thin red line). (e)~Fracture length $\ell(t)$ normalized by the height $H$ of the Couette cell as a function of $(\tau_f-t)/\tau_f$ as inferred from direct visualization ($\bullet$, average over 6 different fractures, error bars show the standard deviation) and from ultrasonic imaging ($\circ$). Gray dots show the visualization data for the longest fracture which leads to the failure of the sample at $\tau_f$. Red lines are the best fits $\ell(t)=\alpha+\beta\log(1-t/\tau_f)$ to the visualization data. Same experiment as in Fig.~\ref{fig3}. See also Suppl. Movie~1.
 \label{fig4}}
 \end{figure*} 
 %%%%%%%%%%%%
@@ -116,7 +116,7 @@ Supplemental Movie~2 shows the failure of a 4\%~wt. casein gel acidified with 1\
 \begin{figure}[h]
 \centering
 \includegraphics[width=7cm,clip]{SuppFig2.eps}
-\caption{(color online) Shear rate response $\gp(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The yellow line shows the power-law behavior $\gp(t)\sim t^{-0.85}$.
+\caption{(color online) Shear rate response $\gp(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The yellow line shows the power-law behavior $\gp(t)\sim t^{-0.85}$. Same experiments as in Figs.~\ref{fig1} and \ref{fig2} of the main text.
 \label{suppfig2}}
 \end{figure} 
 %%%%%%%%%%%%
