Couleur des symboles dans les captions

--- a/creep/creep_yaourt.tex
+++ b/creep/creep_yaourt.tex
@@ -72,7 +72,7 @@ These materials behave as elastic solids under small deformations, but display r
 \begin{figure}
 \centering
 \includegraphics[width=0.9\columnwidth]{Fig1.eps}
-\caption{(color online) Strain response $\gamma(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The gray dotted line shows $\gamma=1$. Inset: failure time $\tau_f$ vs $\sigma$. The red line is the best power-law fit $\tau_f=A\sigma^{-\beta}$ with $\beta=5.45\pm 0.05$ and $A=40.6\pm 0.5$~s.Pa$^\beta$.
+\caption{(color online) Strain response $\gamma(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ (\textcolor{red!25!black}{$\bullet$}), 300 (\textcolor{red!50!black}{$\blacktriangledown$}), 400 (\textcolor{red!75!black}{$\blacksquare$}), 550 (\textcolor{red}{$\blacktriangle$}), and 1000~Pa (\textcolor{orange!50!red}{$\blacklozenge$}) from right to left. The gap width is 1~mm. The gray dotted line shows $\gamma=1$. Inset: failure time $\tau_f$ vs $\sigma$. The red line is the best power-law fit $\tau_f=A\sigma^{-\beta}$ with $\beta=5.45\pm 0.05$ and $A=40.6\pm 0.5$~s.Pa$^\beta$.
 \label{fig1}}
 \end{figure} 
 %%%%%%%%%%%%
@@ -120,7 +120,7 @@ Comparatively, Yield Stress Fluids (YSF) that display a solid-like behavior at r
 \begin{figure*}
 \centering
 \includegraphics[width=18cm,clip]{Fig4.eps}
-\caption{(color online) (a)~Local velocity $\langle v(r,z,t)\rangle_z$ and (b)~local strain field $\langle\gl(r,z,t)\rangle_z$ averaged over the vertical direction $z$ at various times during primary creep: $t/\tau_f=1.9\,10^{-3}$ (black $\bullet$), $1.7\,10^{-2}$ (blue $\blacktriangledown$), and 0.15 (red $\blacksquare$). Solid lines are linear profiles. (c)~Spatiotemporal diagram of the local velocity $\langle v(r,z,t)\rangle_r$ averaged over the radial direction $r$ and plotted in linear color levels as a function of $z$ and $t/\tau_f$. (d)~Standard deviation $\delta_z v(t)$ of $\langle v(r,z,t)\rangle_r$ taken over the vertical direction $z$ (thick black line) together with corresponding standard deviation $\delta_r v(t)$ computed over the radial direction $r$ on the $z$-average $\langle v(r,z,t)\rangle_z$ (thin red line). (e)~Fracture length $\ell(t)$ vs $(\tau_f-t)/\tau_f$ as inferred from direct visualization ($\bullet$, average over 6 different fractures, error bars show the standard deviation) and from ultrasonic imaging ($\circ$) and normalized by the height $H$ of the Couette cell. Gray dots show the visualization data for the longest fracture which leads to the failure of the sample at $\tau_f$. Red lines are the best fits $\ell(t)=\alpha+\beta\log(1-t/\tau_f)$ to the visualization data. Same experiment as in Fig.~\ref{fig3}. See also Suppl. Movie~1.
+\caption{(color online) (a)~Local velocity $\langle v(r,z,t)\rangle_z$ and (b)~local strain field $\langle\gl(r,z,t)\rangle_z$ averaged over the vertical direction $z$ at various times during primary creep: $t/\tau_f=1.9\,10^{-3}$ ($\bullet$), $1.7\,10^{-2}$ (\textcolor{blue}{$\blacktriangledown$}), and 0.15 (\textcolor{red}{$\blacksquare$}). Solid lines are linear profiles. (c)~Spatiotemporal diagram of the local velocity $\langle v(r,z,t)\rangle_r$ averaged over the radial direction $r$ and plotted in linear color levels as a function of $z$ and $t/\tau_f$. (d)~Standard deviation $\delta_z v(t)$ of $\langle v(r,z,t)\rangle_r$ taken over the vertical direction $z$ (thick black line) together with corresponding standard deviation $\delta_r v(t)$ computed over the radial direction $r$ on the $z$-average $\langle v(r,z,t)\rangle_z$ (thin red line). (e)~Fracture length $\ell(t)$ vs $(\tau_f-t)/\tau_f$ as inferred from direct visualization ($\bullet$, average over 6 different fractures, error bars show the standard deviation) and from ultrasonic imaging ($\circ$) and normalized by the height $H$ of the Couette cell. Gray dots show the visualization data for the longest fracture which leads to the failure of the sample at $\tau_f$. Red lines are the best fits $\ell(t)=\alpha+\beta\log(1-t/\tau_f)$ to the visualization data. Same experiment as in Fig.~\ref{fig3}. See also Suppl. Movie~1.
 \label{fig4}}
 \end{figure*} 
 %%%%%%%%%%%%
@@ -265,7 +265,7 @@ Figure~\ref{suppfig1} display the gelation process of a 4\%. sodium caseinate so
 \begin{figure}[h]
 \centering
 \includegraphics[width=7cm,clip]{SuppFig2.eps}
-\caption{(color online) Shear rate response $\gp(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ ($\bullet$), 300 ($\blacktriangledown$), 400 ($\blacksquare$), 550 ($\blacktriangle$), and 1000~Pa ($\blacklozenge$) from right to left. The gap width is 1~mm. The yellow line shows the power-law behavior $\gp(t)\sim t^{-0.85}$.
+\caption{(color online) Shear rate response $\gp(t)$ in a 4\%~wt. casein gel acidified with 1\%~wt. GDL for an imposed shear stress $\sigma=200$ (\textcolor{red!25!black}{$\bullet$}), 300 (\textcolor{red!50!black}{$\blacktriangledown$}), 400 (\textcolor{red!75!black}{$\blacksquare$}), 550 (\textcolor{red}{$\blacktriangle$}), and 1000~Pa (\textcolor{orange!50!red}{$\blacklozenge$}) from right to left. The gap width is 1~mm. The yellow line shows the power-law behavior $\gp(t)\sim t^{-0.85}$.
 \label{suppfig2}}
 \end{figure} 
 %%%%%%%%%%%%
